fix styling issue in profile-view
fix heart icon not aligned on image, fix image width issue

--- a/src/app/profile-view/profile-view.component.scss
+++ b/src/app/profile-view/profile-view.component.scss
@@ -77,7 +77,6 @@
     /* Image styles */
     img {
       max-width: 100%; /* Don't exceed the card width */
-      height: 300px; /* Fixed height for consistent card sizes */
       border-bottom: 1px solid #ddd; /* Divider line under the image */
       border-radius: 8px;
     }
@@ -88,6 +87,20 @@
       bottom: 10px;
       right: 10px;
       font-size: 24px;
+      color: gray;
+      cursor: pointer;
+      background-color: rgba(255, 255, 255, 0.6);
+      border-radius: 50%;
+      padding: 5px;
+    }
+
+    .favorite-icon-pv {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 24px;
+      height: 36px;
+      width: 36px;
       color: gray;
       cursor: pointer;
       background-color: rgba(255, 255, 255, 0.6);
